--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,19 +8,18 @@ TGDRIVE_BOT_TOKEN=123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
 # Secret key to encrypt session strings (32+ urlsafe chars recommended)
 TGDRIVE_SESSION_SECRET=change_me_generate_random_long_secret
 
-# Optional: Simple API token for server endpoints. If set, clients must send Authorization: Bearer <token>
-TGDRIVE_API_TOKEN=
-
 # PostgreSQL URL (async SQLAlchemy + asyncpg)
 TGDRIVE_DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/telegram_drive
 
 # Storage channel configuration (choose one):
-# Option 1: Channel ID (like -1001234567890)
-TGDRIVE_STORAGE_CHANNEL_ID=
-# Option 2: Channel username (like @your_channel_name, without @)
+# Option 1 (Recommended): Channel username (like @your_channel_name, without @)
 TGDRIVE_STORAGE_CHANNEL_USERNAME=
+# Option 2: Channel ID (like -1001234567890)
+TGDRIVE_STORAGE_CHANNEL_ID=
+
+# Optional: Simple API token for server endpoints. If set, clients must send Authorization: Bearer <token>
+TGDRIVE_API_TOKEN=
 
 # Optional: preload a user session (single-user early stage)
 TGDRIVE_USER_SESSION_STRING=
-
 
