feat: 优化日志显示

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,9 +17,12 @@ TGDRIVE_STORAGE_CHANNEL_USERNAME=
 # Option 2: Channel ID (like -1001234567890)
 TGDRIVE_STORAGE_CHANNEL_ID=
 
+# Application settings
+TGDRIVE_LOG_LEVEL=INFO
+TGDRIVE_CORS_ORIGINS=["*"]
+
 # Optional: Simple API token for server endpoints. If set, clients must send Authorization: Bearer <token>
 TGDRIVE_API_TOKEN=
 
 # Optional: preload a user session (single-user early stage)
 TGDRIVE_USER_SESSION_STRING=
-
