feat: 第一阶段后端开发完毕，准备开发前端

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,8 +21,10 @@ TGDRIVE_STORAGE_CHANNEL_ID=
 TGDRIVE_LOG_LEVEL=INFO
 TGDRIVE_CORS_ORIGINS=["*"]
 
-# Optional: Simple API token for server endpoints. If set, clients must send Authorization: Bearer <token>
-TGDRIVE_API_TOKEN=
+# Admin configuration
+TGDRIVE_ADMIN_USERNAME=admin
 
-# Optional: preload a user session (single-user early stage)
-TGDRIVE_USER_SESSION_STRING=
+# JWT settings
+TGDRIVE_JWT_SECRET_KEY=your-super-secret-jwt-key-change-this-in-production
+TGDRIVE_JWT_ALGORITHM=HS256
+TGDRIVE_ACCESS_TOKEN_EXPIRE_MINUTES=30
